; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_asus-laptop.c_asus_setkeycode.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/platform/x86/extr_asus-laptop.c_asus_setkeycode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.key_entry = type { i64, i32 }

@KEY_MAX = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@KE_KEY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_dev*, i32, i32)* @asus_setkeycode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asus_setkeycode(%struct.input_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.input_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.key_entry*, align 8
  %9 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i32, i32* %7, align 4
  %11 = icmp slt i32 %10, 0
  br i1 %11, label %16, label %12

12:                                               ; preds = %3
  %13 = load i32, i32* %7, align 4
  %14 = load i32, i32* @KEY_MAX, align 4
  %15 = icmp sgt i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12, %3
  %17 = load i32, i32* @EINVAL, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %4, align 4
  br label %55

19:                                               ; preds = %12
  %20 = load i32, i32* %6, align 4
  %21 = call %struct.key_entry* @asus_get_entry_by_scancode(i32 %20)
  store %struct.key_entry* %21, %struct.key_entry** %8, align 8
  %22 = load %struct.key_entry*, %struct.key_entry** %8, align 8
  %23 = icmp ne %struct.key_entry* %22, null
  br i1 %23, label %24, label %52

24:                                               ; preds = %19
  %25 = load %struct.key_entry*, %struct.key_entry** %8, align 8
  %26 = getelementptr inbounds %struct.key_entry, %struct.key_entry* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @KE_KEY, align 8
  %29 = icmp eq i64 %27, %28
  br i1 %29, label %30, label %52

30:                                               ; preds = %24
  %31 = load %struct.key_entry*, %struct.key_entry** %8, align 8
  %32 = getelementptr inbounds %struct.key_entry, %struct.key_entry* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 8
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %7, align 4
  %35 = load %struct.key_entry*, %struct.key_entry** %8, align 8
  %36 = getelementptr inbounds %struct.key_entry, %struct.key_entry* %35, i32 0, i32 1
  store i32 %34, i32* %36, align 8
  %37 = load i32, i32* %7, align 4
  %38 = load %struct.input_dev*, %struct.input_dev** %5, align 8
  %39 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = call i32 @set_bit(i32 %37, i32 %40)
  %42 = load i32, i32* %9, align 4
  %43 = call i32 @asus_get_entry_by_keycode(i32 %42)
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %51, label %45

45:                                               ; preds = %30
  %46 = load i32, i32* %9, align 4
  %47 = load %struct.input_dev*, %struct.input_dev** %5, align 8
  %48 = getelementptr inbounds %struct.input_dev, %struct.input_dev* %47, i32 0, i32 0
  %49 = load i32, i32* %48, align 4
  %50 = call i32 @clear_bit(i32 %46, i32 %49)
  br label %51

51:                                               ; preds = %45, %30
  store i32 0, i32* %4, align 4
  br label %55

52:                                               ; preds = %24, %19
  %53 = load i32, i32* @EINVAL, align 4
  %54 = sub nsw i32 0, %53
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %52, %51, %16
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local %struct.key_entry* @asus_get_entry_by_scancode(i32) #1

declare dso_local i32 @set_bit(i32, i32) #1

declare dso_local i32 @asus_get_entry_by_keycode(i32) #1

declare dso_local i32 @clear_bit(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
